# MediScan-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mediscan/: __init__.py  cli.py
mediscan/api/: __init__.py  server.py
mediscan/core/: __init__.py  drug_checker.py  ner_engine.py  pii_masker.py  record_parser.py
mediscan/utils/: __init__.py
mediscan/web/templates/: index.html
tests/: test_drug_checker.py  test_ner.py  test_pii.py  test_record_parser.py
